--- a/port/index.html
+++ b/port/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <!-- type js import -->
+    <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
     <!-- main style import -->
      <link rel="stylesheet" href="./index.css">
      <!-- google fonts import -->
