integrated google analytics

--- a/port/index.html
+++ b/port/index.html
@@ -15,6 +15,16 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <!-- fontawsome import cdn link -->
     <script src="https://kit.fontawesome.com/c650d38a8a.js" crossorigin="anonymous"></script>
+    <!-- google anlytics link -->
+     <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-67FEW8S4ZT"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-67FEW8S4ZT');
+</script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>Ala Portfolio</title>
